feat: Added infinite scrolling for objects in bucket, added README
